<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <ImageView
        android:id="@+id/image_message_profile"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/circle"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/dp_sender_chat"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/text_message_name"
        android:text="@string/sample_name_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/text_message_body"
        android:text="@string/hi_man_how_are_you"
        android:background="@drawable/message_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="240dp"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/text_message_name"
        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

</android.support.constraint.ConstraintLayout>