<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    android:elevation="5dp">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/image_code"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/dp_sender_chat"
            android:layout_marginStart="8dp" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_code"
                android:text="@string/title_threads"
                android:background="@drawable/title_round_upper"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username_codes"
                    android:layout_weight="1"
                    android:text="@string/sample_name_chat"
                    android:layout_marginLeft="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:id="@+id/prog_code"
                    android:text="@string/c"
                    android:drawablePadding="2dp"
                    android:drawableLeft="@drawable/programming"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sample_upvote"
            android:drawableLeft="@drawable/like"
            android:id="@+id/upvote_qna"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sample_upvote"
            android:drawableLeft="@drawable/dislike"
            android:id="@+id/downvote_qna"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sample_upvote"
            android:drawableLeft="@drawable/comment"
            android:id="@+id/comment_code"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/date_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_weight="1"
            android:drawableRight="@android:drawable/ic_menu_my_calendar"
            android:text="@string/sample_upvote" />

    </LinearLayout>


</LinearLayout>

</android.support.v7.widget.CardView>